---
source: sim-validator-assignment/src/validator.rs
expression: "new_ordered_partial_seats(&validators, config.stake_per_seat)"
info:
  - num_blocks: 1000
    num_shards: 4
    seats_per_shard: 2
    stake_per_seat: 100
    max_malicious_stake_per_shard:
      - 1
      - 3
    validator_data: ~
    include_partial_seats: false
  - "validators:"
  - - account_id: validator_0
      stake: 500
      is_malicious: false
      num_seats: 5
      total_stake_share:
        - 5
        - 18
    - account_id: validator_1
      stake: 310
      is_malicious: true
      num_seats: 3
      total_stake_share:
        - 31
        - 180
    - account_id: validator_2
      stake: 90
      is_malicious: false
      num_seats: 0
      total_stake_share:
        - 1
        - 20
    - account_id: validator_3
      stake: 100
      is_malicious: true
      num_seats: 1
      total_stake_share:
        - 1
        - 18
    - account_id: validator_4
      stake: 100
      is_malicious: false
      num_seats: 1
      total_stake_share:
        - 1
        - 18
    - account_id: validator_5
      stake: 100
      is_malicious: false
      num_seats: 1
      total_stake_share:
        - 1
        - 18
    - account_id: validator_6
      stake: 100
      is_malicious: false
      num_seats: 1
      total_stake_share:
        - 1
        - 18
    - account_id: validator_7
      stake: 100
      is_malicious: false
      num_seats: 1
      total_stake_share:
        - 1
        - 18
    - account_id: validator_8
      stake: 100
      is_malicious: false
      num_seats: 1
      total_stake_share:
        - 1
        - 18
    - account_id: validator_9
      stake: 100
      is_malicious: false
      num_seats: 1
      total_stake_share:
        - 1
        - 18
    - account_id: validator_10
      stake: 100
      is_malicious: false
      num_seats: 1
      total_stake_share:
        - 1
        - 18
    - account_id: validator_11
      stake: 100
      is_malicious: false
      num_seats: 1
      total_stake_share:
        - 1
        - 18
---
- validator:
    account_id: validator_1
    stake: 310
    is_malicious: true
    num_seats: 3
    total_stake_share:
      - 31
      - 180
  weight: 10
- validator:
    account_id: validator_2
    stake: 90
    is_malicious: false
    num_seats: 0
    total_stake_share:
      - 1
      - 20
  weight: 90

